cmake_minimum_required(VERSION 2.8.3)
project(pandar_msgs)

find_package(catkin REQUIRED COMPONENTS message_generation std_msgs)

add_message_files(
  DIRECTORY msg
  FILES
  PandarGps.msg
  PandarPacket.msg
  PandarScan.msg
  Pandar40pPacket.msg
  Pandar40pScan.msg
)
generate_messages(DEPENDENCIES std_msgs)

catkin_package(
  CATKIN_DEPENDS message_runtime std_msgs
)
