<package>

  <name>pointcloud_msgs</name>
  <version>1.0.0</version>
  <description>
    ROS message definitions for Pointcloud 3D LIDARs.
  </description>
  <maintainer email="zhengtu@fabu.ai">Tu Zheng</maintainer>
  <author>Tu Zheng</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
